# jvig

./: .gitignore  .travis.yml  README.md  package-lock.json  package.json  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt  setup.cfg  tsconfig.json
.github/workflows/: jvig.yml
jvig/: __init__.py  __main__.py  __version__.py  cli.py  gtfs.py  util.py  valid.py
jvig/static/: cal.js  style.css
jvig/tables/: agency.py  calendar.py  calendar_dates.py  frequencies.py  routes.py  stops.py  times.py  trips.py
jvig/templates/: agency.html.jinja  calendar.html.jinja  calendars.html.jinja  routes.html.jinja  stop.html.jinja  stops.html.jinja  trip.html.jinja  trips.html.jinja
src/: appMenu.ts  appmenu.ts  errs.ts  gtfs.ts  gtfsLoader.ts  gtfsTypes.ts  main.ts  util.ts  validFields.ts
src/renderer/: agency.ts  calendars.ts  loading.ts  routes.ts  stop.ts  stops.ts  tripFunctions.ts  tripInit.ts  trips.ts
src/tables/: agency.ts  calendars.ts  frequencies.ts  routes.ts  stopTimes.ts  stops.ts  trips.ts
src/test/: gtfsLoader.ts  util.ts
src/test/fixture/gtfs/: agency.txt  calendar.txt  invalid_table.txt  routes.txt
tests/: test_gtfs.py  test_util.py  test_valid.py
tests/fixtures/gtfs_wkd/: agency.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
www/: agency.html  calendars.html  loading.html  routes.html  stop.html  stops.html  trip.html  trips.html
www/assets/: autoinit.js  style.css
