[build-system]
requires = ["setuptools>=52", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jvig"
version = "1.0.0-pre1"
description = "GTFS Viewer written using Flask"
readme = "README.md"
license = {text = "GNU General Public License v3.0 or later"}
requires-python = ">=3.9"
dependencies = ["flask", "markupsafe"]

[project.scripts]
jvig = "jvig.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = true, exclude = ["tests", "tests.*"]}

[tool.setuptools.package-data]
jvig = ["static/*", "templates/*.html.jinja"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
