[metadata]
name = jvig
version = 1.0.0-pre1
description = GTFS Viewer written using Flask
long_description = file: readme.md
license = GNU General Public License v3.0 or later

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    flask
    markupsafe

[options.package_data]
jvig =
    static/*.css
    templates/*.html.jinja

[options.packages.find]
exclude =
    tests
    tests.*
