[metadata]
name = jvig
version = 1.0.0-pre1
description = GTFS Viewer written using Flask
long_description = file: README.md
license = GNU General Public License v3.0 or later

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    flask
    markupsafe

[options.entry_points]
console_scripts =
    jvig = jvig.cli:main

[options.package_data]
jvig =
    static/*
    templates/*.html.jinja

[options.packages.find]
exclude =
    tests
    tests.*
